# libquassel

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org  flake.nix  scratch.rs
derive/: Cargo.toml
derive/src/: from_network_impl.rs  lib.rs  to_network_impl.rs
derive/src/from/: mod.rs
derive/src/network/: list.rs  map.rs  maplist.rs  mod.rs
derive/src/setters/: mod.rs
derive/src/sync/: mod.rs
examples/: client.rs
examples/quasselproxy/: Cargo.toml
examples/quasselproxy/src/: main.rs
examples/statetracker/: Cargo.toml
examples/statetracker/src/: command.rs  connect.rs  formatter.rs  main.rs  server.rs
examples/statetracker/src/widgets/: bufferview.rs  mod.rs
src/: lib.rs  main.rs  net.rs  types.rs  util.rs
src/client/: mod.rs
src/error/: mod.rs
src/frame/: mod.rs  tests.rs
src/message/: handshake.rs  mod.rs  signalproxy.rs
src/message/handshake/: clientinit.rs  clientinitack.rs  clientinitreject.rs  clientlogin.rs  clientloginack.rs  clientloginreject.rs  connack.rs  features.rs  init.rs  mod.rs  protocol.rs  sessioninit.rs  types.rs
src/message/signalproxy/: heartbeat.rs  initdata.rs  initrequest.rs  mod.rs  rpccall.rs  syncmessage.rs
src/message/signalproxy/objects/: aliasmanager.rs  backlogmanager.rs  buffersyncer.rs  bufferview.rs  bufferviewconfig.rs  bufferviewmanager.rs  certmanager.rs  chanmodes.rs  coreinfo.rs  highlightrulemanager.rs  identity.rs  ignorelistmanager.rs  ircchannel.rs  ircuser.rs  mod.rs  network.rs  networkinfo.rs
src/message/signalproxy/translation/: aos_soa.rs  mod.rs
src/primitive/: bufferinfo.rs  datetime.rs  message.rs  mod.rs  signedint.rs  string.rs  stringlist.rs  unsignedint.rs  variant.rs  variantlist.rs  variantmap.rs
src/protocol/: mod.rs
src/protocol/error/: mod.rs
src/protocol/frame/: mod.rs
src/protocol/message/: handshake.rs  mod.rs
src/protocol/message/handshake/: types.rs
src/protocol/primitive/: basic.rs  bufferinfo.rs  datetime.rs  message.rs  mod.rs  signedint.rs  string.rs  stringlist.rs  unsignedint.rs  variant.rs  variantlist.rs  variantmap.rs
src/session/: mod.rs
src/tests/: base_types.rs  datetime.rs  frame.rs  handshake_types.rs  mod.rs  variant_types.rs
src/types/: basic.rs  handshake.rs  variant.rs
