[package]
name = "libquassel"
description = "Native rust implementation of the Quassel protocol and library functions"
version = "0.1.0"
authors = ["Max Audron <audron@cocaine.farm>"]
license = "ISC"
homepage = "https://gitlab.com/cocainefarm/libquassel"
repository = "https://gitlab.com/cocainefarm/libquassel"
edition = "2018"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
byteorder = "1.3.2"
failure = "0.1"
either = "1.5"
time = "0.2"

bytes = { version = "0.5" }
flate2 = { version = "1.0", features = ["tokio"], optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
tokio-util = { version = "0.2", features = ["codec"], optional = true }
tokio-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
futures-util = { version = "0.3", features = ["std"], optional = true }
futures = { version = "0.3", optional = true }

[features]
framing = ["tokio", "tokio-util", "flate2"]
client = ["tokio", "tokio-util", "tokio-tls", "native-tls", "futures", "futures-util", "framing"]

default = []

[dev-dependencies]
futures = { version = "0.3" }
flate2 = { version = "1.0", features = ["tokio"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
tokio-test = { version = "0.2" }

[[bin]]
name = "quassel-client"
required-features = ["client"]
