[package]
name = "libquassel"
description = "Native rust implementation of the Quassel protocol and library functions"
version = "0.1.0"
authors = ["Max Audron <audron@cocaine.farm>"]
license = "ISC"
homepage = "https://gitlab.com/cocainefarm/libquassel"
repository = "https://gitlab.com/cocainefarm/libquassel"
edition = "2018"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
byteorder = "1.3.2"
failure = "0.1"
either = "1.5"
time = "0.2"

default-macro = { path = "../default-macro" }

bytes = { version = "1.0" }
flate2 = { version = "1.0", features = ["tokio"], optional = true }
tokio = { version = "1.0", features = [], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
futures-util = { version = "0.3", features = ["std"], optional = true }
futures = { version = "0.3", optional = true }

[features]
framing = ["tokio", "tokio-util", "flate2"]

# Enable all the quassel features
all-quassel-features = ["long-message-id", "long-time", "rich-messages", "sender-prefixes"]

# Serialize message IDs as i64
long-message-id = []
# Serialize Message Time as i64
long-time = []
# Add avatar url and real name to messages
rich-messages = []
# Show prefixes for senders in backlog
sender-prefixes = []


default = []

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
# futures = { version = "0.3" }
# flate2 = { version = "1.0", features = ["tokio"] }
# tokio = { version = "0.3", features = ["full"] }
# tokio-util = { version = "0.5", features = ["codec"] }
# tokio-test = { version = "0.3" }
