[package]
name = "quasselproxy"
version = "0.1.0"
authors = ["Max Audron <audron@cocaine.farm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
byteorder = "1.3.2"
failure = "0.1"
either = "1.5"
time = "0.2"
libquassel = { path = "../../", features = ["framing", "all-quassel-features"] }

bytes = { version = "1.0" }
flate2 = { version = "1.0", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = { version = "0.22" }
webpki-roots = { version = "0.21" }
futures-util = { version = "0.3", features = ["std"] }
futures = { version = "0.3" }
log = "*"
pretty_env_logger = { version = "0.4" }
