[package]
name = "statetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
libquassel = { path = "../../", features = ["framing", "all-quassel-features", "server"], default_features = false }

druid = { git = "https://github.com/linebender/druid", features = ["im"], rev = "0c0851f7be7b2cadd477b9b0caaa91cb081f2e4a" }

anyhow = "*"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"

byteorder = "1"
either = "1"
time = "0.2"
log = "*"

crossbeam-channel = "0.5"

tokio = { version = "1", features = ["full", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = { version = "0.22" }

bytes = { version = "1" }
flate2 = { version = "1", features = ["tokio"] }
webpki-roots = { version = "0.21" }
futures-util = { version = "0.3", features = ["std"] }
futures = { version = "0.3" }
pretty_env_logger = { version = "0.4" }

[workspace]
